# BabaBoy

./: README.md  bot.py  bot.py.bak  bot.py.bak.duplicate  bot.py.bak.media_edit  bot.py.bak.media_edit_final  bot_farewell_update.py  config.py  create_placeholder_audio.py  fix_deletion_sync.py  fix_duplicate_posts.py  fix_edit_tracking.py  fix_media_edit.py  fix_media_edit_advanced.py  fix_media_edit_complete.py  fix_media_edit_final.py  fix_source_channel.py  healthcheck.py  main.py  pyproject.toml  reset_destinations.py  run_bot.py  save_sync_deletions.py  standalone_bot.py  standalone_bot.py.bak.deletion  update_farewell_gifs.py  update_farewell_sequence.py
assets/farewell/: constants.py  laugh_or_cry.m4a
